new hash routing in profile & timeline upgraded to 2.4.1 & download app button in login window

--- a/js/views/login.html
+++ b/js/views/login.html
@@ -74,6 +74,17 @@
 		  <p><small><a ng-click="views.forgot=true; views.login=false">forgot your password?</a></small></p>
 
 		  <span class="version">v2.0.0</span>
+
+		  <hr>
+
+			<!-- download mobile app -->
+			<div id="download">
+				<button class="btn btn-success" type="button">
+					<span class="entypo">&#128241;</span>
+					<span class="msg">Download Mobile App</span>
+				</button>
+			</div>
+			<!-- end download mobile app -->
 		</form>
 	</div>
 	<!-- end loginForm -->
@@ -129,12 +140,3 @@
 	
 	<!-- end change pass -->
 </div>
-
-<!-- download mobile app -->
-<div id="download">
-	<button class="btn btn-large btn-success" type="submit">
-		<span class="entypo">&#128241;</span>
-		<span class="msg">Download Mobile App</span>
-	</button>
-</div>
-<!-- end download mobile app -->
