--- a/js/views/dashboard.html
+++ b/js/views/dashboard.html
@@ -11,28 +11,20 @@
   <div class="span12">
 
 
-    <!-- <div class="span4">
-      <h4>Some Other Widget</h4>
-      <hr>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div> -->
-
-
     <div class="span4">
       <h4>Unread Messages</h4>
       <hr>
-      <p ng-hide="messages.length > 0">There are no messages unread.</p>
+
+      <p ng-hide="(messages.length > 0)">There are no messages unread.</p>
+
       <ul style="list-style: none">
       	<li ng-repeat="message in messages">
-          <a href="#/messages/{{message.uuid}}">{{message.subject | noTitle}}</a> van <a href="#/profile/{{message.requester|convertEve}}/view">{{message.requester|convertEve|convertUserIdToName}}</a>
+          <a href="#/messages?uuid={{message.uuid}}#message">{{message.subject | noTitle}}</a> 
+          van <a href="#/profile/{{message.requester|convertEve}}/view">{{message.requester|convertEve|convertUserIdToName}}</a>
           <br><small class="muted">{{message.creationTime | nicelyDate}}</small>  
       	</li>
       </ul>
+      
     </div>
 
 
