message state change not updating list

--- a/js/views/profile.html
+++ b/js/views/profile.html
@@ -262,7 +262,7 @@
         <div id="timeline">
 
           <!-- user timeline -->
-          <div id="userTimeline"></div>
+          <!-- <div id="userTimeline"></div> -->
           <!-- end user timeline -->
           
         </div>
