fixed rendering issue with timeline & pie chart colors & some others

--- a/js/views/profile.html
+++ b/js/views/profile.html
@@ -251,7 +251,7 @@
 
         <!-- tab header -->
         <div style="overflow: hidden; height: 35px">
-          <h3 style="margin-top: 0;" class="pull-left">User Timeline</h3>
+          <h3 style="margin-top: 0;" class="pull-left">Timeline</h3>
         </div>
         <!-- end tab header -->
         <hr>
@@ -262,11 +262,12 @@
         <div id="timeline">
 
           <!-- user timeline -->
-          <!-- <div id="userTimeline"></div> -->
+          <div id="userTimeline"></div>
           <!-- end user timeline -->
           
         </div>
         <!-- end timeline -->
+        
         <hr>
         <!-- planbaord footer -->
         <!-- <p>
